k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-final-project-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iot-final-project-service
  template:
    metadata:
      labels:
        app: iot-final-project-service
    spec:
      containers:
        - name: iot-final-project-service
          image: nikalively/iot-final-project:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 500m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
