k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-final-project-service
spec:
  selector:
    app: iot-final-project-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
